# kraken

./: CMakeLists.txt
inc/kraken/adt/: either.h  segment.h
inc/kraken/filesystem/: io.h  path.h
inc/kraken/lexer/: lexer.h  token.h  types.h
inc/kraken/memory/: buffer.h
inc/kraken/support/: compiler.h  console.h  error.h  errors.h
inc/kraken/token/: token.h  types.h
samples/: lexer_scan_identifier.kkn  lexer_scan_numbers.kkn  lexer_scan_string.kkn
samples/test/: utf8-file.kkn
src/: CMakeLists.txt  driver.cpp
src/filesystem/: CMakeLists.txt  io.cpp  path.cpp
src/lexer/: lexer.cpp  token.cpp
src/memory/: buffer.cpp
src/support/: console.cpp  error.cpp
test/: CMakeLists.txt  test_entry.cpp
test/adt/: either_test.cpp  segment_test.cpp
test/filesystem/: io_test.cpp  path_test.cpp
test/memory/: buffer_test.cpp
test/support/: console_test.cpp  error_test.cpp
